--- a/src/main/resources/templates/allFlowers/allFlowersList.html
+++ b/src/main/resources/templates/allFlowers/allFlowersList.html
@@ -168,10 +168,7 @@
                     </div>
                     <div class="field_text">
                         <label for="picUrl" class="label_title">图片:</label>
-                        <form enctype="multipart/form-data" method="post" action="/total/uploadimg">
-                            图片<input type="file" id="picUrl" name="file"/>
-                            <input type="submit" value="上传"/>
-                        </form>
+                        <input type="file" id="picUrl" name="file"/>
                        <!-- <input type="text" name="picUrl" id="picUrl" value=""  class="inputtext input_middle required" />-->
                     </div>
                     <div class="field_select">
