--- a/src/main/resources/templates/allFlowers/allFlowersList.html
+++ b/src/main/resources/templates/allFlowers/allFlowersList.html
@@ -131,11 +131,11 @@
         <tr th:each="item : ${list}" class="text-info">
             <td th:text="${item.title}"></td>
             <td th:text="${item.content}"></td>
-            <td th:text="${item.picUrl}" ></td>
+            <td th:text="${item.picUrl}" ><a th:href="@{/total/downloadImg(picUrl=${item.picUrl})}">图片</a></td>
             <td th:text="${item.price}"></td>
             <td th:text="${item.discount}"></td>
             <td th:text="${item.realPrice}" ></td>
-            <td><button th:text="删除" onclick="deleteFlower()"/></td>
+            <td><button th:text="删除" onclick="deleteFlower(${item.id})"/></td>
         </tr>
     </table>
 </div>
