--- a/src/main/resources/templates/allFlowers/allFlowersList.html
+++ b/src/main/resources/templates/allFlowers/allFlowersList.html
@@ -131,11 +131,13 @@
         <tr th:each="item : ${list}" class="text-info">
             <td th:text="${item.title}"></td>
             <td th:text="${item.content}"></td>
-            <td th:text="${item.picUrl}" ><a th:href="@{/total/downloadImg(picUrl=${item.picUrl})}">图片</a></td>
+            <td  ><a th:href="@{/total/downloadImg(picUrl=${item.picUrl})}">图片</a></td>
             <td th:text="${item.price}"></td>
             <td th:text="${item.discount}"></td>
             <td th:text="${item.realPrice}" ></td>
-            <td><button  th:onclick="'javascript:deleteFlower('+${item.id}+');'"></button></td>
+            <td>
+                <a href="javascript:void(0)" class="btn btn-follow" ><span onclick="javascript:deleteFlower('+${item.id}+');">删除</span></a>
+               </td>
         </tr>
     </table>
 </div>
